修改之前页面，给经理演示

--- a/template/collection.html
+++ b/template/collection.html
@@ -99,10 +99,10 @@
                     <li style="margin-left:45px;">
                         <ul>
                             <li>
-                                <button ng-class="{active:isActive}" ng-click="changeBtn($event)">最新</button>
+                                <button ng-class="{active:isActive}" ng-click="changeBtn($event)" data-status="1">最新</button>
                             </li>
                             <li style="margin-left:20px;">
-                                <button ng-class="{active:!isActive}" ng-click="changeBtn($event)">最热</button>
+                                <button ng-class="{active:!isActive}" ng-click="changeBtn($event)" data-status="2">最热</button>
                             </li>
                         </ul>
                     </li>
@@ -205,10 +205,10 @@
                     <li style="margin-left:45px;">
                         <ul>
                             <li>
-                                <button ng-class="{active:isActive}" ng-click="changeBtn($event)">最新</button>
+                                <button ng-class="{active:isActive}" ng-click="changeBtn($event)" data-status="1">最新</button>
                             </li>
                             <li style="margin-left:20px;">
-                                <button ng-class="{active:!isActive}" ng-click="changeBtn($event)">最热</button>
+                                <button ng-class="{active:!isActive}" ng-click="changeBtn($event)" data-status="2">最热</button>
                             </li>
                         </ul>
                     </li>
