--- a/css/login.css
+++ b/css/login.css
@@ -295,8 +295,14 @@ footer {
             padding-left: 8px;
             text-decoration: none;
             font-size: 12px; }
+      .login .login_outer .login_box .login_code {
+        margin-top: 20px;
+        display: flex;
+        width: 800px;
+        align-items: center;
+        justify-content: center; }
       .login .login_outer .login_box .login_btn {
-        margin-top: 38px;
+        margin-top: 20px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
