--- a/template/login.html
+++ b/template/login.html
@@ -12,7 +12,7 @@
                 <label for="username"></label>
                 <input type="text" name="username" ng-model="username" id="username" placeholder="请输入手机号码">
                 <span>
-                    <i></i><u>正确消息asdfasdf</u>
+                    <i></i><u>正确消息</u>
                 </span>
             </div>
             <div class="login_user">
@@ -24,6 +24,10 @@
             </div>
             <div ng-show="">用户名或者密码错误，还有<span>2</span>次登录机会！</div>
             <div ng-show="">验证码错误请重新输入！</div>
+            <div class="login_code">
+                <input type="text">
+                <img src="../getImgCode.do" ng-click="changeimg($event)" alt="">
+            </div>
             <div class="login_btn">
                 <button type="submit" ng-disabled="false" ng-click="showForm()">登录</button>
             </div>
