--- a/css/index.scss
+++ b/css/index.scss
@@ -64,13 +64,14 @@ $theme-color-active:#ea703a;
                 font-style: italic;
                 color:$theme-color;
                 small{
-                  padding:0 15px 0 11px;
+                  padding:0 15px 0 0;
                 }
               }
               h6{
                 margin-top:10px;
                 font-weight: normal;
                 font-size:12px;
+                @include limitLine(2);
                 color:rgba(0,0,0,0.6);
                 line-height: 1.52;
               }
@@ -78,6 +79,7 @@ $theme-color-active:#ea703a;
                 width:200px;
                 margin-top:10px;
                 font-weight: normal;
+                height:52px;
                 @include limitLine(3);
                 font-size:12px;
                 color:rgba(0,0,0,0.6);
