--- a/template/museumDetails.html
+++ b/template/museumDetails.html
@@ -1,32 +1,31 @@
 <p class="breadcrumb">
-    <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="museum.museumMap">博物馆导览</a><u>&gt;&gt;</u><span>山东省博物馆</span>
+    <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="museum.museumMap">博物馆导览</a><u>&gt;&gt;</u><span ng-bind="data.museumInfo.museumName"></span>
 </p>
 <div class="museum-details">
     <div class="museum-details-img">
         <img src="img/digization.png" width="640" height="360" alt="">
     </div>
     <div class="museum-details-msg">
-        <p class="museum-details-msg-title">山东省博物馆</p>
+        <p class="museum-details-msg-title" ng-bind="data.museumInfo.museumName"></p>
         <table>
             <tbody>
             <tr>
                 <td>类别：</td>
-                <td>综合类博物馆</td>
+                <td ng-bind="data.museumInfo.category"></td>
             </tr>
             <tr>
                 <td>地区：</td>
-                <td>吉林 长春市</td>
+                <td ng-bind="data.cityList[0].name"></td>
             </tr>
             <tr>
                 <td>门票：</td>
-                <td>免费</td>
+                <td ng-bind="data.museumInfo.ticketPrice"></td>
             </tr>
             </tbody>
         </table>
         <h6>开放时间</h6>
         <div class="museum-details-msg-time">
-            <p>周二至周日（9:00-16:30）</p>
-            <p>周二至周日（9:00-16:30）</p>
+            <p ng-bind="data.museumInfo.openingHours"></p>
         </div>
     </div>
     <div class="museum-details-service">
@@ -39,40 +38,32 @@
         </ul>
         <ol class="museum-details-service-content">
             <li class="active">
-                <p>
-                    1山东省博物馆是新中国成立后建立的一座省级综合性地质博物馆，成立于1954年，1956年对外开放，位于济南市文化西路。（东经117度10分，北纬36度66分左右，地址在山东省济南市经十路11899号（燕山立交桥东2公里）。博物馆新馆选址在济南市区主干道经十路东段，2007年12月29日举行奠基，2010年6月圆满竣工，2010年11月16日正式向社会开放，“山东省博物馆”至此更名“山东博物馆”。山东博物馆现占地34000平方米，建筑面积21000平方米，宏伟、典雅的建筑群，体现了民族风格与现代艺术的结合，成为历史文化名城济南的一大景观）
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consectetur dolorem esse illo, ipsa
-                    minus odio praesentium quae quod voluptate. Aliquid aperiam assumenda dolore eaque est quam, quo
-                    suscipit? Tenetur?
+                <p ng-bind="data.museumInfo.introduce">
                 </p>
                 <div>
                     <button ng-click="lookAll($event)">{{btn}}</button>
                 </div>
             </li>
             <li>
-                <p>
-                    2山东省博物馆是新中国成立后建立的一座省级综合性地质博物馆，成立于1954年，1956年对外开放，位于济南市文化西路。（东经117度10分，北纬36度66分左右，地址在山东省济南市经十路11899号（燕山立交桥东2公里）。博物馆新馆选址在济南市区主干道经十路东段，2007年12月29日举行奠基，2010年6月圆满竣工，2010年11月16日正式向社会开放，“山东省博物馆”至此更名“山东博物馆”。山东博物馆现占地34000平方米，建筑面积21000平方米，宏伟、典雅的建筑群，体现了民族风格与现代艺术的结合，成为历史文化名城济南的一大景观）</p>
+                <p ng-bind="data.museumInfo.buyTicket">
                 <div>
                     <button ng-click="lookAll($event)">{{btn}}</button>
                 </div>
             </li>
             <li>
-                <p>
-                    3山东省博物馆是新中国成立后建立的一座省级综合性地质博物馆，成立于1954年，1956年对外开放，位于济南市文化西路。（东经117度10分，北纬36度66分左右，地址在山东省济南市经十路11899号（燕山立交桥东2公里）。博物馆新馆选址在济南市区主干道经十路东段，2007年12月29日举行奠基，2010年6月圆满竣工，2010年11月16日正式向社会开放，“山东省博物馆”至此更名“山东博物馆”。山东博物馆现占地34000平方米，建筑面积21000平方米，宏伟、典雅的建筑群，体现了民族风格与现代艺术的结合，成为历史文化名城济南的一大景观）</p>
+                <p ng-bind="data.museumInfo.nearby">
                 <div>
                     <button ng-click="lookAll($event)">{{btn}}</button>
                 </div>
             </li>
             <li>
-                <p>
-                    4山东省博物馆是新中国成立后建立的一座省级综合性地质博物馆，成立于1954年，1956年对外开放，位于济南市文化西路。（东经117度10分，北纬36度66分左右，地址在山东省济南市经十路11899号（燕山立交桥东2公里）。博物馆新馆选址在济南市区主干道经十路东段，2007年12月29日举行奠基，2010年6月圆满竣工，2010年11月16日正式向社会开放，“山东省博物馆”至此更名“山东博物馆”。山东博物馆现占地34000平方米，建筑面积21000平方米，宏伟、典雅的建筑群，体现了民族风格与现代艺术的结合，成为历史文化名城济南的一大景观）</p>
+                <p ng-bind="data.museumInfo.visitNotes">
                 <div>
                     <button ng-click="lookAll($event)">{{btn}}</button>
                 </div>
             </li>
             <li>
-                <p>
-                    5山东省博物馆是新中国成立后建立的一座省级综合性地质博物馆，成立于1954年，1956年对外开放，位于济南市文化西路。（东经117度10分，北纬36度66分左右，地址在山东省济南市经十路11899号（燕山立交桥东2公里）。博物馆新馆选址在济南市区主干道经十路东段，2007年12月29日举行奠基，2010年6月圆满竣工，2010年11月16日正式向社会开放，“山东省博物馆”至此更名“山东博物馆”。山东博物馆现占地34000平方米，建筑面积21000平方米，宏伟、典雅的建筑群，体现了民族风格与现代艺术的结合，成为历史文化名城济南的一大景观）</p>
+                <p ng-bind="data.museumInfo.serviceInformation">
                 <div>
                     <button ng-click="lookAll($event)">{{btn}}</button>
                 </div>
@@ -81,38 +72,13 @@
     </div>
     <div class="museum-details-collection">
         <p class="museum-details-title">
-            馆内藏品 <a ui-sref="collection({museum:'济南市博物馆',type:'文物藏品',id:'1'})">更多 &Gt;</a>
+            馆内藏品 <a ui-sref="collection({museum:data.museumInfo.museumName,type:'文物藏品',id:data.museumInfo.id})">更多 &Gt;</a>
         </p>
         <ul>
-            <li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
-                </a>
-            </li><li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
-                </a>
-            </li><li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
-                </a>
-            </li><li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
-                </a>
-            </li><li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
-                </a>
-            </li><li>
-                <a ui-sref="collection.details" target="_blank">
-                    <img src="img/collection1.png" width="192" height="128" alt="">
-                    <p>清康熙御笔青花瓷</p>
+            <li ng-repeat="x in data.culList">
+                <a ui-sref="collectiondetails({id:x.id})" target="_blank">
+                    <img ng-src="{{x.fpic}}" width="192" height="128" alt="">
+                    <p ng-bind="x.name"></p>
                 </a>
             </li>
         </ul>
@@ -123,39 +89,36 @@
         </p>
         <div style="margin-top:8px;">
             <img src="img/map.png" alt="">
-            <p>
-                地址：山东省济南市中山大道18号
+            <p ng-bind="data.museumInfo.address">
             </p>
         </div>
     </div>
-    <div class="museum-details-display">
+    <div class="museum-details-display" ng-if="data.spreList">
         <p class="museum-details-title">
-            展览 <a ui-sref="display({museum:'济南市博物馆',id:'2'})">更多 &Gt;</a>
+            展览 <a ui-sref="display({museum:data.museumInfo.museumName,id:data.museumInfo.id})">更多 &Gt;</a>
         </p>
         <div class="museum-details-display-content">
-            <a href=""><img src="img/展览-博物馆_03.png" width="297" height="167px" alt=""></a>
+            <a ui-sref="displaydetails({id:data.spreList.id})"><img ng-src="{{data.spreList.pictureThumb}}" width="297" height="167px" alt=""></a>
             <div>
-                <h6><a href="">山东文化展</a></h6>
-                <h5>展期：<span>2016.12.01-2017.02-01</span></h5>
-                <p>
-                    鼎是我国古代的一种炼制器物，山东拥有非常悠久的历史，显示了当时劳动人民的智慧结晶。
+                <h6><a ui-sref="displaydetails({id:data.spreList.id})" ng-bind="data.spreList.headline"></a></h6>
+                <h5 ng-show="data.spreList.staTime">展期：<span ng-bind="data.spreList.staTime+'-'+data.spreList.overTime"></span></h5>
+                <p ng-bind="data.spreList.content">
                 </p>
             </div>
         </div>
 
     </div>
-    <div class="museum-details-digization">
+    <div class="museum-details-digization" ng-if="data.virList">
         <img src="img/83.png" alt="" class="line-clip">
         <p class="museum-details-title">
             虚拟展厅
         </p>
         <div class="museum-details-digization-content">
-            <img src="img/3d.png" width="297" height="167px" alt="">
+            <a href="" target="_blank"><img ng-src="{{'../'+data.virList.pictureThumb}}" width="297" height="167px" alt=""></a>
             <div>
-                <h6>
-                    汉代画像艺术展
+                <h6 ng-bind="data.virList.viName">
                 </h6>
-                <a ui-sref="digitization({museum:'济南省博物馆',id:'2'})">更多 &Gt;</a>
+                <a ui-sref="digitization({museum:data.museumInfo.museumName,id:data.museumInfo.id})">更多 &Gt;</a>
             </div>
         </div>
     </div>
