--- a/css/museum.scss
+++ b/css/museum.scss
@@ -147,6 +147,10 @@
   .museum-details-map {
     margin-left: 54px;
     div {
+      .museum-details-map-url{
+        width:308px;
+        height:314px;
+      }
       p {
         width: 308px;
         font-size: 14px;
