--- a/template/login.html
+++ b/template/login.html
@@ -26,7 +26,7 @@
                 <input type="text" ng-model="verificationcode">
                 <img src="../getImgCode.do" width="80" height="30" ng-click="changeimg($event)" alt="">
             </div>
-            <div class="login_msg" ng-show="error>0">
+            <div class="login_msg" ng-show="errormsg">
                 <p ng-bind="tip"></p>
             </div>
             <div class="login_btn">
