--- a/template/login.html
+++ b/template/login.html
@@ -35,7 +35,7 @@
             <div class="service">
                 <a href=""><u>忘记密码？</u></a>
                 <span>
-                    没有账号？<a href="">立即注册</a>
+                    没有账号？<a ui-sref="Register">立即注册</a>
                 </span>
             </div>
             <div class="third-party">
