--- a/css/display.scss
+++ b/css/display.scss
@@ -101,6 +101,7 @@
       }
       .condition-more {
         float: left;
+        cursor: pointer;
         font-size: 12px;
         line-height: 40px;
         color: $theme-color-active;
