--- a/css/album.scss
+++ b/css/album.scss
@@ -395,6 +395,8 @@ span.emotion.active {
   width:680px;
   padding-bottom:10px;
   margin-bottom:15px;
+  opacity: 1;
+  transition: opacity 1s;
   .ablum-details-comment-first-top{
     display:flex;
     flex-flow: row nowrap;
@@ -496,6 +498,30 @@ span.emotion.active {
         padding-top:10px;
         font-size:12px;
         color:$theme-color-active;
+      }
+    }
+    .ablum-details-comment-others-reply{
+      width:548px;
+      height:43px;
+      margin-left:72px;
+      margin-bottom:20px;
+      border:1px solid #ccc;
+      input{
+        width:428px;
+        height:42px;
+        border:none;
+        background:#f7f7f7;
+        margin:0;
+        padding:0;
+        padding-left:10px;
+        vertical-align:top;
+      }
+      button{
+        border:none;
+        width:110px;
+        height: 43px;
+        background:#e6e6e6;
+        color:#999;
       }
     }
   }
