--- a/css/collection.scss
+++ b/css/collection.scss
@@ -153,6 +153,7 @@
       }
       .condition-more {
         float: left;
+        cursor:pointer;
         font-size: 12px;
         line-height: 40px;
         color: $theme-color-active;
