--- a/css/digitization.css
+++ b/css/digitization.css
@@ -120,13 +120,17 @@ header {
       position: absolute;
       right: 0px;
       top: 2px;
-      font-size: 12px;
-      background: #008582;
-      color: #fff;
       outline: none;
+      display: block;
+      background: #008582;
       border: none;
       width: 93px;
       height: 32px; }
+      header .header-top button a {
+        font-size: 12px;
+        line-height: 32px;
+        color: #fff;
+        padding: 5px 0; }
       header .header-top button:hover {
         background: #ea703a; }
   header .header-bottom {
