--- a/template/display_details.html
+++ b/template/display_details.html
@@ -11,7 +11,7 @@
         </h3>
         <h3 style="margin-left:20px">
             <i>时间：</i>
-            <span ng-show="detailsData.beginTime"><u ng-bind="detailsData.beginTime| date:'yyyy/MM/dd'"></u>--<u ng-bind="detailsData.endTime | date:'yyyy/MM/dd'"></u></span><span ng-hide="detailsData.beginTime">常设展览</span>
+            <span ng-show="detailsData.staTime"><u ng-bind="detailsData.staTime"></u>--<u ng-bind="detailsData.overTime"></u></span><span ng-hide="detailsData.staTime">常设展览</span>
         </h3>
     </div>
     <div class="display-details-content">
