--- a/template/register.html
+++ b/template/register.html
@@ -14,17 +14,16 @@
             <tr>
                 <td><label for="">用户昵称：</label></td>
                 <td><input type="text" ng-required="true" ng-pattern="/^[\u4E00-\u9FA5A-Za-z0-9_]+$/" ng-maxlength="20"
-                           ng-minlength="4" name="nikename" ng-model="data.nikename"></td>
-                <td>{{myform.username.$error}}</td>
+                           ng-minlength="4" name="nikename" ng-model="nikename"></td>
             </tr>
             <tr>
                 <td><label for="">手机号码：</label></td>
                 <td><input type="text" ng-required="true" ng-pattern="/^1[3-9][0-9]\d{8}$/" name="phone"
-                           ng-model="data.phone"></td>
+                           ng-model="phone"></td>
             </tr>
             <tr>
                 <td><label for="">输入下图验证码：</label></td>
-                <td><input type="text" ng-required="true" name="piccode" ng-model="data.piccode"></td>
+                <td><input type="text" ng-required="true" name="piccode" ng-model="piccode"></td>
             </tr>
             <tr style="line-height: 80px;">
                 <td></td>
@@ -39,22 +38,22 @@
             </tr>
             <tr>
                 <td><label for="">短信验证码：</label></td>
-                <td><input type="text" style="width:182px;margin-right:20px;" ng-model="data.secretCode" ng-required="true" name="secretCode">
+                <td><input type="text" style="width:182px;margin-right:20px;" ng-model="secretCode" ng-required="true" name="secretCode">
                     <button class="register-msn" ng-click="countdown()" ng-bind="status" ng-class="{send:!send}" ng-disabled="!send"></button>
                 </td>
             </tr>
             <tr>
                 <td><label for="">登录密码：</label></td>
-                <td><input type="text" ng-required="true" ng-model="data.password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
+                <td><input type="text" ng-required="true" ng-model="password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
             </tr>
             <tr>
                 <td><label for="">确认密码：</label></td>
-                <td><input type="text" ng-model="data.rpassword" name="rpassword" ng-required="true"></td>
+                <td><input type="text" ng-model="rpassword" name="rpassword" ng-required="true"></td>
             </tr>
             <tr>
                 <td></td>
                 <td>
-                    <input type="checkbox" style="width:12px;height:12px;" name="agreement" ng-model="data.agreement">
+                    <input type="checkbox" style="width:12px;height:12px;" name="agreement" ng-model="agreement">
                     <label for="" style="color:#008582;font-size:12px;" ng-click="openmsg()">本人已阅读并同意注册协议</label>
                 </td>
             </tr>
@@ -117,6 +116,11 @@
                  <i class="error"></i><u>验证码不为空</u>
             </span>
         </div>
+        <div class="register-tips register-tips-piccode">
+            <span>
+                 <i class="error"></i><u>获取短信验证码前请先填写图形验证码</u>
+            </span>
+        </div>
         <!--短信验证码-->
         <div class="register-tips register-tips-msg"
              ng-if="myform.secretCode.$dirty && myform.secretCode.$error.required">
@@ -125,7 +129,7 @@
             </span>
         </div>
         <div class="register-tips register-tips-msg"
-             ng-if="myform.secretCode.$dirty && myform.secretCode.$error.required">
+             ng-if="myform.secretCode.$dirty && !myform.secretCode.$error.required">
             <span>
                  <i></i><u></u>
             </span>
@@ -163,24 +167,24 @@
         </div>
         <!--确认密码-->
         <div class="register-tips register-tips-rpassword"
-             ng-if="myform.password.$dirty && myform.rpassword.$dirty && data.password !== data.rpassword">
+             ng-if="myform.password.$dirty && myform.rpassword.$dirty && password !== rpassword">
             <span>
                  <i class="error"></i><u>密码不一致</u>
             </span>
         </div>
-        <div class="register-tips register-tips-rpassword" ng-if="myform.password.$dirty && myform.rpassword.$dirty && data.password == data.rpassword">
+        <div class="register-tips register-tips-rpassword" ng-if="myform.password.$dirty && myform.rpassword.$dirty && password == rpassword">
             <span>
                  <i></i><u></u>
             </span>
         </div>
-        <input type="submit" style="margin-left:48px;" class="register-submit" ng-click="submitFun()" value="注册" ng-disabled="myform.$invalid || data.agreement==''" ng-class="{active:!myform.$invalid && data.agreement}">
+        <input type="submit" style="margin-left:48px;" class="register-submit" ng-click="submitFun()" value="注册" ng-disabled="myform.$invalid || agreement==''||password != rpassword" ng-class="{active:!myform.$invalid && agreement && password == rpassword}">
         <p style="width:254px;text-align: left;margin:10px auto 0;padding-left:48px;">已有账号？<a ui-sref="login">请登录</a></p>
-    </form ng-show>
+    </form>
     <div class="register-secend" ng-show="!first">
         <div>
             <h1>注册成功</h1>
-            <p>5s后自动跳转</p>
-            <button>返回首页</button>
+            <p ng-bind="status2"></p>
+            <a ui-sref="home">返回首页</a>
         </div>
     </div>
 </div>
